SET(CMAKE_LEGACY_CYGWIN_WIN32 0)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(DSEXMON)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "-mwindows -DWIN32 -DUSE_OPENGL32 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64")
SET(CMAKE_EXE_LINKER_FLAGS "-static -mwindows")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY
    ${PROJECT_SOURCE_DIR}/${CMAKE_BUILD_TYPE}/bin
)
SET(SOURCE_FILES src/dsexmon.cc)
INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include
    /mingw32/include
    /mingw32/include/FL/images
)
LINK_DIRECTORIES(/mingw32/lib)

ADD_EXECUTABLE(dsexmon ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(dsexmon
    fltk
    ole32
    uuid
    comctl32
)
